<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.janari.notekeeper.NoteActivity"
    tools:showIn="@layout/activity_note">


    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_courses"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_note_title"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine" />

</RelativeLayout>
